--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 		<dependency>
 			<groupId>org.twitter4j</groupId>
 			<artifactId>twitter4j-core</artifactId>
-			<version>3.0.3</version>
+			<version>4.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.twitter4j</groupId>
 			<artifactId>twitter4j-stream</artifactId>
-			<version>3.0.3</version>
+			<version>4.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jeffthefate</groupId>
@@ -60,5 +60,10 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.3</version>
 		</dependency>
+		<dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 	</dependencies>
 </project>
